k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-management-proxy-svc
  namespace: service-management
spec:
  selector:
    app: service-management-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
